<resources>
    <string name="app_name">Sm4sh</string>
    <string name="key_user_preferences" translatable="false">user_preferences</string>
    <string name="text_price_quantity" translatable="false">$%1$s</string>
    <string name="text_catalog">Access our extended Catalog</string>
    <string name="text_worth_gaming">Know the little is worth gaming</string>
    <string name="text_real_time_updates">Real-time updates</string>
    <string name="text_next">Next</string>
    <string name="text_get_started">Get started</string>
    <string name="text_games">Games</string>
    <string name="text_game_picture">Game picture</string>
    <string name="text_filter">Filters</string>
    <string name="text_clear_filter">Clear filters</string>
    <string name="text_new">New (%1$d)</string>
    <string name="text_popular">Popular (%1$d)</string>
    <string name="text_all">All (%1$d)</string>
    <string name="text_filtered">Filtered (%1$d)</string>
    <string name="text_sort">Sort by</string>
    <string name="text_filters">Filters</string>
    <string name="text_downloads">Downloads</string>
    <string name="text_date_added">Date added</string>
    <string name="text_price">Price</string>
    <string name="text_prices_range">Prices range</string>
    <string name="text_ratings">Ratings</string>
    <string name="text_brands">Brands</string>
    <string name="text_apply">Apply</string>
    <string name="text_game_details_summary">Game details summary</string>
    <string name="text_sku">SKU: %1$s</string>
    <string name="text_downloads_number">%1$s downloads</string>
    <string name="text_all_option">All</string>
</resources>
