<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_onboarding">

    <ImageView
        android:id="@+id/image_character"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/text_catalog"
        android:src="@drawable/ic_little_mac"
        app:layout_constraintBottom_toTopOf="@+id/text_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_real_time_updates"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/button_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_character" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_submit"
        style="@style/AppOnBoardingFilledButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:paddingStart="46dp"
        android:paddingEnd="46dp"
        android:text="@string/text_get_started"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_description" />


</androidx.constraintlayout.widget.ConstraintLayout>